feat: Add dynamic coupon rewrites for live deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "rewrites": [
+    {
+      "source": "/c/:couponId",
+      "destination": "/kai-coupons/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/:path*",
