Deploy new monolithic site design - homepage + 4 standalone pages

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       "destination": "/adventures.html"
     },
     {
+      "source": "/adventures/:slug",
+      "destination": "/adventures/:slug.html"
+    },
+    {
       "source": "/audio",
       "destination": "/audio.html"
     },
